# Atena-multi-agent

./: .gitattributes  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: quality.yml  release.yml
docs/superpowers/plans/: 2026-07-23-local-first-orchestrator-persistence.md
docs/superpowers/specs/: 2026-07-23-local-first-persistence-design.md
scripts/: submit-winget.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  fs.rs  git.rs  layouts.rs  mod.rs  orchestrations.rs  pty.rs  sessions.rs  settings.rs  workspaces.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs
src-tauri/src/repositories/: mod.rs  orchestrations.rs
src-tauri/windows/: hooks.nsh
src/components/: theme-switcher.tsx  update-manager.tsx
src/components/layout/: bars.tsx  sidebar.tsx  window-titlebar.tsx
src/components/ui/: agent-card.tsx  badge.tsx  button.tsx  card.tsx  command-palette.tsx  dialog.tsx  empty-state.tsx  input.tsx  label.tsx  log-viewer.tsx  scroll-area.tsx  select.tsx  separator.tsx  status-badge.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
src/features/agents/: agent-dialog.tsx  agent-panel.tsx  orchestrator-domain.ts  (+10 more)
src/lib/: db.ts  errors.test.ts  errors.ts  git.ts  pty.ts  security.ts  tauri-command.test.ts  tauri-command.ts  tauri.ts  utils.ts
src/styles/: tokens.css
src/types/: index.ts
(+21 files in other folders)
